--- a/abac-front/package.json
+++ b/abac-front/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "sweetalert2": "^11.14.1"
   },
   "devDependencies": {
     "@types/jwt-decode": "^2.2.1",
