--- a/abac-front/package.json
+++ b/abac-front/package.json
@@ -23,6 +23,7 @@
     "sweetalert2": "^11.14.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/jwt-decode": "^2.2.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
